Fix double border in nav

--- a/src/css/minside/_molecules/_nav-primary.css
+++ b/src/css/minside/_molecules/_nav-primary.css
@@ -133,7 +133,7 @@
     
     a {
       border: 1px solid var(--silver);
-      border-width: 1px 0;
+      border-width: 1px 0 0 0;
       flex: 1;
     }
   }
